Add file ids